objects/Training_Agreement_Class_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>ClassCriteriaBE__c</fullName>
        <formula>Class__r.Course__r.Course_Code__c+Class__r.Format_Of_Class__c+Class__r.Language__r.Language_Code__c+CASESAFEID(Enterprise_Training_Agreement__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClassCriteriaBE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Class__c.Format_Of_Class__c</field>
                <operation>equals</operation>
                <value>Self-Paced</value>
            </filterItems>
            <filterItems>
                <field>Class__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Enterprise Agreement</relationshipLabel>
        <relationshipName>Training_Agreement_Class</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>Part Number</description>
        <formula>Class__r.Course__r.Course_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Part Number</inlineHelpText>
        <label>Course Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Class_Association__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is to prevent the same class from being added more than once to training agreement</description>
        <label>Duplicate Class Association</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Enterprise_Training_Agreement__c</fullName>
        <label>Enterprise Training Agreement</label>
        <referenceTo>Enterprise_Training_Agreement__c</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>Training_Agreement_Class_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Training Agreement Class Relationship</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Training Agreement Class Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Agreement Class Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>